--- a/.github/workflows/pr-comment-on-labeled.yml
+++ b/.github/workflows/pr-comment-on-labeled.yml
@@ -18,3 +18,4 @@ jobs:
         uses: peaceiris/actions-label-commenter@v1
         with:
           config_file: .github/label-commenter-config.yml
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
