--- a/.github/workflows/pr-title-checker.yml
+++ b/.github/workflows/pr-title-checker.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-      - uses: thehanimo/pr-title-checker@v1.3.4
+      - uses: dtibi/pr-title-checker@v1.3.5
         with:
           pass_on_octokit_error: false
           configuration_path: ".github/pr-title-checker-config.json"
